syntax = "proto3";

package cline;
import "cline/common.proto";
option java_package = "bot.cline.proto";
option java_multiple_files = true;

service DictationService {
  rpc startRecording(RecordingRequest) returns (RecordingResult);
  rpc stopRecording(RecordingRequest) returns (RecordedAudio);
  rpc cancelRecording(RecordingRequest) returns (RecordingResult);
  rpc getRecordingStatus(RecordingRequest) returns (RecordingStatus);
  rpc transcribeAudio(TranscribeAudioRequest) returns (Transcription);
}

message RecordingRequest {
  Metadata metadata = 1;
}

message TranscribeAudioRequest {
  Metadata metadata = 1;
  string audio_base64 = 2;
  string language = 3;
}

message RecordingResult {
  bool success = 1;
  string error = 2;
}

message RecordedAudio {
  bool success = 1;
  string audio_base64 = 2;
  string error = 3;
}

message RecordingStatus {
  bool is_recording = 1;
  double duration_seconds = 2;
  string error = 3;
}

message Transcription {
  string text = 1;
  string error = 2;
}
